--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@ body {
 
 p {
   position: absolute;
-  top: 45px;
   left: 50%;
   transform: translate(-50%);
   white-space: nowrap;
@@ -29,4 +28,8 @@ p {
   font-size: 16px;
   text-align: center;
   color: darkblue;
+}
+
+#opener {
+  top: 25px;
 }
