Genetic algortithm written and tested

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ p {
     font-family: sans-serif;
     font-weight: 600;
     text-align: center;
-    color: darkblue;
+    color: #FFF;
 }
 
 #opener {
