--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,14 @@ p {
     top: 272px;
     left: 53.5%;
 }
+
+#troy-lodge {
+    margin-left: 12%;
+    display: block;
+    width: 300px;
+}
+#about {
+    text-align: center;
+    width: 70%;
+    white-space: normal;
+}
