--- a/css/burger.css
+++ b/css/burger.css
@@ -36,7 +36,7 @@
     display: block;
     width: 100%;
     height: 5px;
-    background-color: black;
+    background-color: #111;
     margin: 6px 0px;
     transition: 0.4s;
 }
@@ -47,7 +47,7 @@
     display: block;
     width: 100%;
     height: 5px;
-    background-color: black;
+    background-color: #111;
     margin: 6px 0px;
     transition: 0.4s;
 }
@@ -86,7 +86,7 @@
     width: 100%;
     min-height: 100vh;
     z-index: 5;
-    background: linear-gradient(to bottom, #000, #191970);
+    background: linear-gradient(to bottom, #000, #F0F2F0, #000C40);
     padding-top: 120px;
     transition: 0.4s;
     font-family: sans-serif;
@@ -100,7 +100,7 @@
     width: 100%;
     min-height: 100vh;
     z-index: 5;
-    background: linear-gradient(to bottom, #000, #191970);
+    background: linear-gradient(to bottom, #111, #414d0b, #727a17);
     padding-top: 120px;
     transition: 0.4s;
     font-family: sans-serif;
@@ -129,12 +129,12 @@
 .mobile-nav-right a {
     display: block;
     text-align: center;
-    color: black;
+    color: #FFF;
     max-width: 300px;
     font-size: 18px;
     margin: 0 auto 16px;
     font-weight: 600;
-    background-color: #FFF;
+    background-color: #191970;
     padding: 12px 16px;
     text-decoration: none;
 }
@@ -164,10 +164,9 @@
 }
 
 .mobile-nav-right a:hover {
-    background-color: green;
+    background-color: #262626;
     text-decoration: none;
     font-size: 20px;
-    color: #191970;
     font-weight: 600;
 }
 
