--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ a {
 }
 
 #troy-lodge {
-    margin-left: 12%;
+    margin-left: 50%;
+    transform: translateX(-50%);
     display: block;
     width: 300px;
 }
